RegexParser fix with (?ix)